[all] more small refactoring