@@ -1,7 +1,6 @@
 package net.parostroj.timetable.gui.utils;
 
 import java.awt.Color;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -16,9 +15,9 @@ import net.parostroj.timetable.output2.gt.*;
  *
  * @author jub
  */
-public class NormalHTS implements HighlightedTrains, RegionSelector<TimeInterval>, ApplicationModelListener {
+public class NormalHTS implements HighlightedTrains, RegionSelector<TimeInterval> {
 
-    private Set<Train> set = Collections.emptySet();
+    private Set<Train> set = Set.of();
     private final Color selectionColor;
     private TimeInterval selectedTimeInterval;
     private final ApplicationModel model;
@@ -28,22 +27,29 @@ public class NormalHTS implements HighlightedTrains, RegionSelector<TimeInterval
 
     public NormalHTS(final ApplicationModel model, Color selectionColor,
             final GraphicalTimetableView view) {
-        model.addListener(event -> {
-            appEvent = true;
-            try {
-                if (!selection && event.getType() == ApplicationModelEventType.SELECTED_TRAIN_CHANGED) {
-                    final Train selectedTrain = model.getSelectedTrain();
-                    view.selectItems(selectedTrain == null ? Collections.emptyList()
-                            : selectedTrain.getTimeIntervalList(), TimeInterval.class);
-                }
-            } finally {
-                appEvent = false;
-            }
-        });
         this.selectionColor = selectionColor;
         this.model = model;
         this.view = view;
-        this.model.addListener(this);
+        model.addListener(this::selectedTrainChanged);
+        this.model.addListener(this::diagramChanged);
+    }
+
+    private void selectedTrainChanged(ApplicationModelEvent event) {
+        appEvent = true;
+        try {
+            if (!selection && event.getType() == ApplicationModelEventType.SELECTED_TRAIN_CHANGED) {
+                final Train selectedTrain = model.getSelectedTrain();
+                view.selectItems(selectedTrain == null ? List.of()
+                        : selectedTrain.getTimeIntervalList(), TimeInterval.class);
+            }
+        } finally {
+            appEvent = false;
+        }
+    }
+
+    private void diagramChanged(ApplicationModelEvent event) {
+        if (event.getType() == ApplicationModelEventType.SET_DIAGRAM_CHANGED)
+            view.setTrainDiagram(event.getModel().getDiagram());
     }
 
     @Override
@@ -63,7 +69,7 @@ public class NormalHTS implements HighlightedTrains, RegionSelector<TimeInterval
             TimeInterval interval = SelectorUtils.select(intervals, selectedTimeInterval, SelectorUtils.createUniqueTrainIntervalFilter());
             // set selected train
             Train selected = interval != null ? interval.getTrain() : null;
-            set = selected == null ? Collections.emptySet() : Collections.singleton(selected);
+            set = selected == null ? Set.of() : Set.of(selected);
             model.setSelectedTrain(selected);
             selectedTimeInterval = interval;
             if (!appEvent) {
@@ -78,18 +84,12 @@ public class NormalHTS implements HighlightedTrains, RegionSelector<TimeInterval
     @Override
     public List<TimeInterval> getSelected() {
         Train train = model.getSelectedTrain();
-        return train == null ? Collections.emptyList() : train.getTimeIntervalList();
+        return train == null ? List.of() : train.getTimeIntervalList();
     }
 
     @Override
     public boolean editSelected() {
         model.fireEvent(new ApplicationModelEvent(ApplicationModelEventType.EDIT_SELECTED_TRAIN, model));
         return true;
-    }
-
-    @Override
-    public void modelChanged(ApplicationModelEvent event) {
-        if (event.getType() == ApplicationModelEventType.SET_DIAGRAM_CHANGED)
-            view.setTrainDiagram(event.getModel().getDiagram());
     }
 }
